Updates the IME state when necessary when switching top-level windows.

BUG=679564,680524

Review-Url: https://codereview.chromium.org/2700933002
Cr-Commit-Position: refs/heads/master@{#451460}

Former-commit-id: 17c78241a37810aff596974cfdec60b01bc0f4c5